--- a/final/index.html
+++ b/final/index.html
@@ -17,16 +17,16 @@
             <div id="mainlogo"><a href="./index.html" class="nav-logo">bountiful foods</a></div>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Home</a>
+                    <a href="./index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Fresh</a>
+                    <a href="./fresh.html" class="nav-link">Fresh</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Order</a>
+                    <a href="./fresh.html" class="nav-link">Order</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
+                    <a href="./aboutus.html" class="nav-link">About Us</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -42,7 +42,19 @@
         <h1>Farm to table has never been this simple.</h1>
     </div>
     <div id="order">
-        <h1>order now.</h1>
+        <h1>order now</h1>
+    </div>
+</div>
+<div id="freshindex">
+    <div id="explain">
+        <h2>Our mission is to provide locally grown, organic fresh foods all across the Southern California coast.</h2>
+    </div>
+    <div id="fruitsection">
+    <h2 id="fruitq">Want to make your own personalized fruit drink mix? Click here to make your own delicious, fresh drink.</h2>
+    <img id="image" src="./images/drink.webp" loading="lazy" alt="drink" width="400">  
+    </div>
+    <div id="count">
+        <h2># of Drinks You Have Made: </h2>
     </div>
 </div>
 <div id="cali">
