--- a/final/index.html
+++ b/final/index.html
@@ -46,8 +46,9 @@
     </div>
 </div>
 <div id="freshindex">
-    <div id="explain">
-        <h2>Our mission is to provide locally grown, organic fresh foods all across the Southern California coast.</h2>
+    <div id="side">
+        <h2 id="explain">Our mission is to provide locally grown, organic fresh foods all across the Southern California coast.</h2>
+        <h2 id="hidden">We are in various locations from Los Angeles to San Diego</h2>
     </div>
     <div id="fruitsection">
     <h2 id="fruitq">Want to make your own personalized fruit drink mix? Click here to make your own delicious, fresh drink.</h2>
