--- a/final/index.html
+++ b/final/index.html
@@ -51,7 +51,10 @@
         <h2 id="hidden">We are in various locations from Los Angeles to San Diego</h2>
     </div>
     <div id="fruitsection">
-    <h2 id="fruitq">Want to make your own personalized fruit drink mix? Click here to make your own delicious, fresh drink.</h2>
+    <div id="fruitq">
+    <h2>Want to make your own personalized fruit drink mix? Make your own delicious, fresh drink here: </h2>
+    <div id="freshbutton"><h1>MAKE YOUR DRINK</h1></div>
+    </div>
     <img id="image" src="./images/drink.webp" loading="lazy" alt="drink" width="400">  
     </div>
     <div id="count">
