--- a/final/index.html
+++ b/final/index.html
@@ -53,7 +53,7 @@
     <div id="fruitsection">
     <div id="fruitq">
     <h2>Want to make your own personalized fruit drink mix? Make your own delicious, fresh drink here: </h2>
-    <div id="freshbutton"><h1>MAKE YOUR DRINK</h1></div>
+    <div class="freshbutton"><h1><a href="./fresh.html">Make Your Drink</a></h1></div>
     </div>
     <img id="image" src="./images/drink.webp" loading="lazy" alt="drink" width="400">  
     </div>
