--- a/final/index.html
+++ b/final/index.html
@@ -46,9 +46,8 @@
     </div>
 </div>
 <div id="freshindex">
-    <div id="side">
-        <h2 id="explain">Our mission is to provide locally grown, organic fresh foods all across the Southern California coast.</h2>
-        <h2 id="hidden">We are in various locations from Los Angeles to San Diego</h2>
+    <div id="explain">
+        <h2>Our mission is to provide locally grown, organic fresh foods all across the Southern California coast.We are in various locations from Los Angeles to San Diego, ready to help you on your journey to healthier living.</h2>
     </div>
     <div id="fruitsection">
     <div id="fruitq">
