--- a/final/index.html
+++ b/final/index.html
@@ -41,13 +41,10 @@
     <div id="heromessage">
         <h1>Farm to table has never been this simple.</h1>
     </div>
-    <div id="order">
-        <h1>order now</h1>
-    </div>
 </div>
 <div id="freshindex">
     <div id="explain">
-        <h2>Our mission is to provide locally grown, organic fresh foods all across the Southern California coast.We are in various locations from Los Angeles to San Diego, ready to help you on your journey to healthier living.</h2>
+        <h2>Our mission is to provide locally grown, organic fresh foods all across the Southern California coast. We are in various locations from Los Angeles to San Diego</h2>
     </div>
     <div id="fruitsection">
     <div id="fruitq">
@@ -62,6 +59,7 @@
 </div>
 <div id="cali">
     <img src="./images/california.jpeg" loading="lazy" alt="california coast" width="1000">  
+    <div id="location"><h1>Calsbad, California</h1></div>
 </div>
 <footer>
     <p>&copy; <span id = 'currentYear'></span> | Last Updated: <span id='lastModified'></span></p>
