--- a/final/index.html
+++ b/final/index.html
@@ -59,7 +59,10 @@
 </div>
 <div id="cali">
     <img src="./images/california.jpeg" loading="lazy" alt="california coast" width="1000">  
-    <div id="location"><h1>Calsbad, California</h1></div>
+    <div id="location">
+        <h1>Carlsbad, California</h1>
+        <h3>Home to our market. Carlsbad has beautiful beaches, amazing weather, and a number of fun things to do.</h3>
+    </div>
 </div>
 <footer>
     <p>&copy; <span id = 'currentYear'></span> | Last Updated: <span id='lastModified'></span></p>
