--- a/final/index.html
+++ b/final/index.html
@@ -64,6 +64,16 @@
         <h3>Home to our market. Carlsbad has beautiful beaches, amazing weather, and a number of fun things to do.</h3>
     </div>
 </div>
+<div id="contactinfo">
+    <div id="business">
+        <h2>Location: </h2>
+        <h2>Phone Number:</h2>
+        <h2>About Us</h2>
+    </div>
+    <div id="socialmedia">
+        <h2>Check us out on social media!</h2>
+    </div>
+</div>
 <footer>
     <p>&copy; <span id = 'currentYear'></span> | Last Updated: <span id='lastModified'></span></p>
 </footer>
