--- a/final/index.html
+++ b/final/index.html
@@ -22,9 +22,6 @@
                     <a href="./fresh.html" class="nav-link">Fresh</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./fresh.html" class="nav-link">Order</a>
-                </li>
-                <li class="nav-item">
                     <a href="./aboutus.html" class="nav-link">About Us</a>
                 </li>
             </ul>
@@ -61,7 +58,7 @@
     <img src="./images/california.jpeg" loading="lazy" alt="california coast" width="1000">  
     <div id="location">
         <h1>Carlsbad, California</h1>
-        <h3>Home to our market. Carlsbad has beautiful beaches, amazing weather, and a number of fun things to do.</h3>
+        <h3>Home to our main market, Carlsbad has beautiful beaches, amazing weather, and a number of fun things to do.</h3>
     </div>
 </div>
 <div id="contactinfo">
