--- a/final/aboutus.html
+++ b/final/aboutus.html
@@ -33,6 +33,12 @@
             </div>
         </nav>
 </header>
+<main>
+    <div class="hero">
+    <img src="./images/about2.jpeg" loading="lazy" alt="Fresh Food Market" width="1000"> 
+    <h1 id="abouttitle">Who Are We?</h1>
+    </div>
+</main>
 <footer>
     <p>&copy; <span id = 'currentYear'></span> | Last Updated: <span id='lastModified'></span></p>
 </footer>
