--- a/final/index.html
+++ b/final/index.html
@@ -33,7 +33,7 @@
             </div>
         </nav>
 </header>
-<div id="hero">
+<div class="hero">
     <img src="./images/hero.jpeg" loading="lazy" alt="hero" width="1000">  
     <div id="heromessage">
         <h1>Farm to table has never been this simple.</h1>
@@ -62,13 +62,15 @@
     </div>
 </div>
 <div id="contactinfo">
-    <div id="business">
-        <h2>Location: </h2>
-        <h2>Phone Number:</h2>
-        <h2>About Us</h2>
+    <div class="business">
+        <h2>Phone Number: (760) 312-1341</h2>
+        <h2><a href="https://www.google.com/maps?q=carlsbad+california&rlz=1C5CHFA_enUS976US976&um=1&ie=UTF-8&sa=X&ved=2ahUKEwj5kInktZP-AhX6J0QIHe-vC2sQ0pQJegQIBhAC" target="_blank">Location</a></h2>
+        <div class="freshbutton"><h2 id="aboutbutton"><a href="./aboutus.html">About Us</a></h2></div>
     </div>
-    <div id="socialmedia">
+    <div class="business">
         <h2>Check us out on social media!</h2>
+        <a href="https://www.instagram.com/" target="_blank"><img id="facebook" src="./images/facebook.png" alt="logo"></a>
+        <a href="https://twitter.com/" target="_blank"><img id = "twitter" src="./images/twitter.png" alt="logo"></a>
     </div>
 </div>
 <footer>
