--- a/final/aboutus.html
+++ b/final/aboutus.html
@@ -36,7 +36,20 @@
 <main>
     <div class="hero">
     <img src="./images/about2.jpeg" loading="lazy" alt="Fresh Food Market" width="1000"> 
-    <h1 id="abouttitle">Who Are We?</h1>
+    <h1 class="about">Who Are We?</h1>
+    <h2 class="aboutexplain">Starting in 2018, Bountiful Foods wanted to bring fresh, organic foods to the people of Carlsbad, California. Since then, we have seen tremendous growth and have been able to expand to many different areas, as well as traveled to local areas with food trucks. Look at for us in our local area or call us to see when we are coming to you! </h2>
+    <div id="contactinfo">
+        <div class="business">
+            <h2>Phone Number: (760) 312-1341</h2>
+            <h2><a href="https://www.google.com/maps?q=carlsbad+california&rlz=1C5CHFA_enUS976US976&um=1&ie=UTF-8&sa=X&ved=2ahUKEwj5kInktZP-AhX6J0QIHe-vC2sQ0pQJegQIBhAC" target="_blank">Location</a></h2>
+            <div class="freshbutton"><h2 id="aboutbutton"><a href="./aboutus.html">About Us</a></h2></div>
+        </div>
+        <div class="business">
+            <h2>Check us out on social media!</h2>
+            <a href="https://www.instagram.com/" target="_blank"><img id="facebook" src="./images/facebook.png" alt="logo"></a>
+            <a href="https://twitter.com/" target="_blank"><img id = "twitter" src="./images/twitter.png" alt="logo"></a>
+        </div>
+    </div>
     </div>
 </main>
 <footer>
