--- a/final/index.html
+++ b/final/index.html
@@ -60,6 +60,9 @@
         <h1>Carlsbad, California</h1>
         <h3>Home to our main market, Carlsbad has beautiful beaches, amazing weather, and a number of fun things to do.</h3>
     </div>
+    <div id="weather">
+        <h2>3 Day Forecast</h2>
+    </div>
 </div>
 <div id="contactinfo">
     <div class="business">
