--- a/final/index.html
+++ b/final/index.html
@@ -72,8 +72,9 @@
     </div>
     <div class="business">
         <h2>Check us out on social media!</h2>
-        <a href="https://www.instagram.com/" target="_blank"><img id="facebook" src="./images/facebook.png" alt="logo"></a>
-        <a href="https://twitter.com/" target="_blank"><img id = "twitter" src="./images/twitter.png" alt="logo"></a>
+        <a href="https://www.facebook.com/" target="_blank"><img id="facebook" src="./images/facebook.png" alt="facebook logo"></a>
+        <a href="https://twitter.com/" target="_blank"><img id = "twitter" src="./images/twitter.png" alt="twitter logo"></a>
+        <a href="https://www.pinterest.com/" target="_blank"><img id="instagram" src="./images/pinterest.png" alt="pinterest logo"></a>
     </div>
 </div>
 <footer>
