--- a/final/order.html
+++ b/final/order.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="./scripts/main.js" defer></script>
     <script src="./scripts/thankyou.js" defer></script>
+    <script src="./scripts/order.js" defer></script>
 </head>
 <body>
     <header class="header">
