--- a/final/index.html
+++ b/final/index.html
@@ -51,7 +51,7 @@
     <img id="image" src="./images/drink.webp" loading="lazy" alt="drink" width="400">  
     </div>
     <div id="count">
-        <h2># of Drinks You Have Made: </h2>
+        <h2># of Drinks You Have Made: <span id="visits"></span></h2>
     </div>
 </div>
 <div id="cali">
