--- a/final/fresh.html
+++ b/final/fresh.html
@@ -94,6 +94,7 @@
         <input type="hidden" name="time" id="time" value="">
         <button><input type="submit" id="submit" value="Submit Your Order"></button>
         </form>
+        <p>Number of drinks you have made: <span id="visits"></span></p>
     </div>
         
 </main>
