--- a/final/fresh.html
+++ b/final/fresh.html
@@ -65,24 +65,24 @@
         <p>
             <select id="select1" name="select1" required>
                 <option value="">--Please choose an option--</option>
-                <option value="np">Non-Profit</option>
-                <option value="bronze">Bronze</option>
-                <option value="silver">Silver</option>
-                <option value="gold">Gold</option>
+                <option value="Apple">Apple</option>
+                <option value="Apricot">Apricot</option>
+                <option value="Banana">Banana</option>
+                <option value="Blueberry">Blueberry</option>
             </select>
             <select id="select2" name="select2" required>
                 <option value="">--Please choose an option--</option>
-                <option value="np">Non-Profit</option>
-                <option value="bronze">Bronze</option>
-                <option value="silver">Silver</option>
-                <option value="gold">Gold</option>
+                <option value="Apple">Apple</option>
+                <option value="Apricot">Apricot</option>
+                <option value="Banana">Banana</option>
+                <option value="Blueberry">Blueberry</option>
             </select>
             <select id="select3" name="select3" required>
                 <option value="">--Please choose an option--</option>
-                <option value="np">Non-Profit</option>
-                <option value="bronze">Bronze</option>
-                <option value="silver">Silver</option>
-                <option value="gold">Gold</option>
+                <option value="Apple">Apple</option>
+                <option value="Apricot">Apricot</option>
+                <option value="Banana">Banana</option>
+                <option value="Blueberry">Blueberry</option>
             </select>
         </p>
         <p>
