--- a/final/index.html
+++ b/final/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <script src="./scripts/main.js" defer></script>
     <script src="./scripts/weather.js" defer></script>
+    <script src="./scripts/home.js" defer></script>
 
 </head>
 <body>
@@ -35,6 +36,7 @@
             </div>
         </nav>
 </header>
+<main>
 <div class="hero">
     <img src="./images/hero.jpeg" loading="lazy" alt="hero" width="1000">  
     <div id="heromessage">
@@ -85,6 +87,7 @@
         <a href="https://www.pinterest.com/" target="_blank"><img id="instagram" src="./images/pinterest.png" alt="pinterest logo"></a>
     </div>
 </div>
+</main>
 <footer>
     <p>&copy; <span id = 'currentYear'></span> | Last Updated: <span id='lastModified'></span></p>
 </footer>
