--- a/final/index.html
+++ b/final/index.html
@@ -90,6 +90,7 @@
 </main>
 <footer>
     <p>&copy; <span id = 'currentYear'></span> | Last Updated: <span id='lastModified'></span></p>
+    <p>Weather Data courtesy of <a href="https://openweathermap.org/">Open Weather Map</a></p>
 </footer>
 </body>
 </html>
