--- a/final/fresh.html
+++ b/final/fresh.html
@@ -69,6 +69,25 @@
                 <option value="Apricot">Apricot</option>
                 <option value="Banana">Banana</option>
                 <option value="Blueberry">Blueberry</option>
+                <option value="Blackberry">Blackberry</option>
+                <option value="Cherry">Cherry</option>
+                <option value="Cranberry">Cranberry</option>
+                <option value="Dragonfruit">Dragonfruit</option>
+                <option value="Grape">Grape</option>
+                <option value="Guava">Guava</option>
+                <option value="Kiwi">Kiwi</option>
+                <option value="Lemon">Lemon</option>
+                <option value="Lime">Lime</option>
+                <option value="Mango">Mango</option>
+                <option value="Orange">Orange</option>
+                <option value="Papaya">Papaya</option>
+                <option value="Peach">Peach</option>
+                <option value="Pear">Pear</option>
+                <option value="Pineapple">Pineapple</option>
+                <option value="Raspberry">Raspberry</option>
+                <option value="Strawberry">Strawberry</option>
+                <option value="Tangerine">Tangerine</option>
+                <option value="Watermelon">Watermelon</option>
             </select>
             <select id="select2" name="select2" required>
                 <option value="">--Please choose an option--</option>
@@ -76,6 +95,25 @@
                 <option value="Apricot">Apricot</option>
                 <option value="Banana">Banana</option>
                 <option value="Blueberry">Blueberry</option>
+                <option value="Blackberry">Blackberry</option>
+                <option value="Cherry">Cherry</option>
+                <option value="Cranberry">Cranberry</option>
+                <option value="Dragonfruit">Dragonfruit</option>
+                <option value="Grape">Grape</option>
+                <option value="Guava">Guava</option>
+                <option value="Kiwi">Kiwi</option>
+                <option value="Lemon">Lemon</option>
+                <option value="Lime">Lime</option>
+                <option value="Mango">Mango</option>
+                <option value="Orange">Orange</option>
+                <option value="Papaya">Papaya</option>
+                <option value="Peach">Peach</option>
+                <option value="Pear">Pear</option>
+                <option value="Pineapple">Pineapple</option>
+                <option value="Raspberry">Raspberry</option>
+                <option value="Strawberry">Strawberry</option>
+                <option value="Tangerine">Tangerine</option>
+                <option value="Watermelon">Watermelon</option>
             </select>
             <select id="select3" name="select3" required>
                 <option value="">--Please choose an option--</option>
@@ -83,6 +121,25 @@
                 <option value="Apricot">Apricot</option>
                 <option value="Banana">Banana</option>
                 <option value="Blueberry">Blueberry</option>
+                <option value="Blackberry">Blackberry</option>
+                <option value="Cherry">Cherry</option>
+                <option value="Cranberry">Cranberry</option>
+                <option value="Dragonfruit">Dragonfruit</option>
+                <option value="Grape">Grape</option>
+                <option value="Guava">Guava</option>
+                <option value="Kiwi">Kiwi</option>
+                <option value="Lemon">Lemon</option>
+                <option value="Lime">Lime</option>
+                <option value="Mango">Mango</option>
+                <option value="Orange">Orange</option>
+                <option value="Papaya">Papaya</option>
+                <option value="Peach">Peach</option>
+                <option value="Pear">Pear</option>
+                <option value="Pineapple">Pineapple</option>
+                <option value="Raspberry">Raspberry</option>
+                <option value="Strawberry">Strawberry</option>
+                <option value="Tangerine">Tangerine</option>
+                <option value="Watermelon">Watermelon</option>
             </select>
         </p>
         <p>
